# individual-income-tax

./: .gitignore  README.md  opencode-bak.jsonc  pyproject.toml  requirements.txt
.omo/: boulder.json
.omo/drafts/: tax-declaration-tool.md  个税累计计算方案.md
.omo/evidence/: task-2-low-income.txt  task-2-mid-income.txt
.omo/plans/: tax-declaration-tool.md  个税累计计算工具.md
app/: main.py
app/routers/: dashboard.py  employees.py  history.py  monthly.py
app/static/: style.css
app/templates/: base.html  dashboard.html  employees.html  history.html  monthly.html  monthly_preview.html
db/: database.py  models.py
services/: export_service.py  monthly_service.py  payroll_parser.py  personnel_import.py
tax_calculator/: core.py  models.py  tax_brackets.py
tests/: test_core.py  test_models.py  test_services.py
web/: app.py
web/static/: style.css
web/templates/: index.html  results.html
